# lesson8-geometricobjects-tamakomuraki

./: Exercise_1_problem_1_2.md  Exercise_1_problem_3_4.md  README.md  pyproject.toml
