[tool.poetry]
name = "repl_python3_lesson8-geometricobjects-tamakomuraki"
version = "0.1.0"
description = ""
authors = ["tamakomuraki <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
shapely = "^1.7.1"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
